--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="api_error">發生了一些問題，請稍後重新嘗試。</string>
     <string name="category_header">最新發行專輯</string>
     <string name="play_list_header">近期精選歌單</string>
+    <string name="songlist_header">歌曲列表</string>
     <string name="retry">重新連線</string>
     <string name="reconnect">立即上線</string>
     <string name="auth_exception">Invalid token</string>
+    <string name="api_exception">This api will not be called in this page</string>
 </resources>
